@@ -179,10 +179,7 @@ Starting HotswapAgent '/home/theuser/openxava-studio-7-r4/studio/jre/lib/hotswap
     }
 ]
 </code></pre>
-      <p>This should be enough, but if it doesn't work it might be because your project's <i>settings.json</i>
-        interferes, in that case add to your project's <i>settings.json</i>:</p>
-      <pre><code class="json">"java.jdt.ls.java.home": "${default}"
-</code></pre>
+      
       <p>Visual Studio Code compiles the code automatically as you edit it, just like OpenXava Studio, 
          so you just have to touch the code and go to the browser to see the application changed immediately.</p>
     </div>
