@@ -169,11 +169,6 @@ Starting HotswapAgent '/home/theuser/openxava-studio-7-r4/studio/jre/lib/hotswap
     }
 ]
 </code></pre>
-      <p>Con esto debería bastar, pero si no funciona puede ser porque el <i>settings.json</i>
-        de tu proyecto interfiera, en ese caso añade al <i>settings.json</i> de
-        tu proyecto:</p>
-      <pre><code class="json">"java.jdt.ls.java.home": "${default}"
-</code></pre>
       <p>Visual Studio Code compila el código automáticamente a medida que lo
         editas, igual que OpenXava Studio, así que solo tienes que tocar el
         código e ir al navegador para ver la aplicación cambiada de forma
